# PrivyPass_backend

./: .gitignore  Cargo.toml
src/: main.rs
src/crypto/: keys.rs  mod.rs  proof.rs
src/models/: mod.rs
src/routes/: account.rs  deposit.rs  mod.rs  transfer.rs  withdraw.rs
src/solana/: client.rs
