[package]
name = "privy_pass_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"

# Solana & SPL Token
solana-client = "3.0.0"
solana-sdk = "3.0.0"
solana-zk-sdk = "5.0"
spl-token-2022 = "10.0.0"
spl-token-confidential-transfer-proof-extraction = "0.5.1"
spl-token-confidential-transfer-proof-generation = "0.5.1"
spl-associated-token-account = "8.0.0"

# Cryptography
curve25519-dalek = "4.1.3"
aes-gcm = "0.10"
rand = "0.8"
bs58 = "0.5"  # Base58 encoding/decoding

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Environment
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database (optional - for key storage)
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"], optional = true }

# Async utilities
futures = "0.3"

[features]
default = []
database = ["sqlx"]
